fixed corousels being one item wide on firefox

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -203,6 +203,7 @@ form {
     overflow-y: hidden;
     flex-direction: column;
     max-height: 100%;
+    min-width: 80vw;
     height: min-content;
     box-sizing: border-box;
     max-width: 100dvw;
